Bug Fix: External iFrame - Cross browser fixes + Fixed scrollbar in FireFox

--- a/static/scss/PUB/_Component_exteraliframe.scss
+++ b/static/scss/PUB/_Component_exteraliframe.scss
@@ -1,7 +1,7 @@
 .external {
 	iframe {
 		width: 100%;
-		height: 1030px;
+		height: 975px;
 		border: 0;
 	}
 }
