--- a/static/scss/external.scss
+++ b/static/scss/external.scss
@@ -56,6 +56,7 @@ b {
 
 body > div > table {
     width: 100% !important;
+    line-height: 1em;
 
     > tbody {
         > tr {
@@ -101,6 +102,7 @@ body > div > table {
         }
 
         td {
+            background: none;
             border-bottom: 1px solid $gray-lightest !important;
         }
 
